--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Android14</string>
+    <string name="app_name">Android English 14</string>
+    <string name="title_label">First Title TextView</string>
+    <string name="label_subtitle">Description TextView</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
