--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,20 @@
 <resources>
-    <string name="app_name">Android English 14</string>
+    <string name="app_name">HomeFitPoints</string>
     <string name="title_label">First Title TextView</string>
     <string name="label_subtitle">Description TextView</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello</string>
+
+    <string name="login_title">Welcome!</string>
+    <string name="name_hint">Enter your name</string>
+    <string name="email_hint">Enter your email</string>
+    <string name="confirm_email_hint">Confirm your email</string>
+    <string name="error_emails_do_not_match">Emails do not match</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="login_button">Sign In</string>
+    <string name="welcome_message">Welcome, %1$s!</string>
+    <string name="your_email_is">Your email is: %1$s</string>
+    <string name="default_guest_name">Guest</string>
+    <string name="default_no_email">Not provided</string>
+    <string name="back_button">Go Back</string>
+
 </resources>
